[project]
name = "cdp-sdk"
version = "0.0.7"
description = "CDP Python SDK"
readme = "README.md"
authors = [{name = "John Peterson", email = "john.peterson@coinbase.com"}]
license = {file = "LICENSE.md"}
keywords = ["coinbase", "sdk", "crypto", "cdp"]

requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.4.0",
    "aiohttp==3.10.5",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "asn1crypto==1.5.1",
    "async-timeout==4.0.3",
    "attrs==24.2.0",
    "bip-utils==2.9.3",
    "bitarray==2.9.2",
    "cbor2==5.6.4",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.3.2",
    "ckzg==2.0.1",
    "coincurve==20.0.0",
    "crcmod==1.7",
    "cryptography==43.0.1",
    "cytoolz==0.12.3",
    "ecdsa==0.19.0",
    "ed25519-blake2b==1.4.1",
    "eth-account==0.13.3",
    "eth-hash==0.7.0",
    "eth-keyfile==0.8.1",
    "eth-keys==0.5.1",
    "eth-rlp==2.1.0",
    "eth-typing==5.0.0",
    "eth-utils==5.0.0",
    "eth_abi==5.1.0",
    "frozenlist==1.4.1",
    "hexbytes==1.2.1",
    "idna==3.10",
    "multidict==6.1.0",
    "parsimonious==0.10.0",
    "py-sr25519-bindings==0.2.0",
    "pycparser==2.22",
    "pycryptodome==3.20.0",
    "pydantic==2.9.2",
    "pydantic_core==2.23.4",
    "PyJWT==2.9.0",
    "PyNaCl==1.5.0",
    "python-dateutil==2.9.0.post0",
    "pyunormalize==16.0.0",
    "regex==2024.9.11",
    "requests==2.32.3",
    "rlp==4.0.1",
    "six==1.16.0",
    "toolz==0.12.1",
    "types-requests==2.32.0.20240914",
    "typing_extensions==4.12.2",
    "urllib3==2.2.3",
    "web3==7.2.0",
    "websockets==13.0.1",
    "yarl==1.11.1",
]

[project.optional-dependencies]
dev = [
    "astroid==3.2.4",
    "autopep8==1.5.5",
    "coverage==7.6.1",
    "isort==5.13.2",
    "mccabe==0.6.1",
    "mypy==1.11.2",
    "mypy-extensions==1.0.0",
    "pycodestyle==2.6.0",
    "pydocstyle==6.3.0",
    "pyflakes==2.2.0",
    "pylint==3.2.7",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.6.5",
    "types-requests==2.32.0.20240914",
    "yapf==0.40.2",
    "jedi==0.17.2",
    "pygls==1.3.1",
    "python-language-server==0.36.2",
    "pytoolconfig==1.3.1",
    "rope==1.13.0",
    "ruff-lsp==0.0.56",
    "pluggy==1.5.0",
    "parso==0.7.1",
    "lsprotocol==2023.0.1",
    "sphinx==8.0.2",
    "sphinx-autobuild==2024.9.19",
    "sphinxcontrib-napoleon==0.7",
    "sphinx-autodoc-typehints==2.4.4",
    "myst-parser==4.0.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://docs.cdp.coinbase.com/cdp-sdk/docs/welcome"

[tool.setuptools.packages.find]
where = ["."]
include = ["cdp*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=cdp --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["./cdp/client/**", "./build/**", "./dist/**", "./docs/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["D213", "D203", "D100", "D104", "D107", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["cdp"]

[tool.coverage.run]
omit = ["cdp/client/*"]