[tool.poetry]
name = "cdp-sdk"
version = "0.18.0"
description = "CDP Python SDK"
authors = ["John Peterson <john.peterson@coinbase.com>"]
license = "LICENSE.md"
readme = "README.md"
packages = [{ include = "cdp" }]

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^2.2.3"
pydantic = "^2.10.3"
web3 = "^7.6.0"
pyjwt = "^2.10.1"
cryptography = "^44.0.0"
python-dateutil = "^2.9.0.post0"
coincurve = "^20.0.0"
bip-utils = "^2.9.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
sphinx = "^8.0.2"
sphinx-autobuild = "^2024.9.19"
sphinxcontrib-napoleon = "^0.7"
sphinx-autodoc-typehints = "^2.4.4"
myst-parser = "^4.0.0"
ruff-lsp = "^0.0.58"
python-lsp-server = "^1.12.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["./build/**", "./dist/**", "./docs/**", "./cdp/client/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["D213", "D203", "D100", "D104", "D107", "E501"]

[tool.ruff.lint.pep8-naming]
# Allow camelCase property names in WalletData import for cross-compatibility with Node.JS SDK
classmethod-decorators = ["classmethod"]
ignore-names = ["networkId", "walletId"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["cdp"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=cdp --cov-report=term-missing -m 'not e2e'"
testpaths = [
    "tests",
]
markers = [
  "e2e: e2e tests, requiring env, deselect with '-m \"not e2e\"'",
]

[tool.coverage.run]
omit = ["cdp/client/*"]
